--- a/common/build.gradle
+++ b/common/build.gradle
@@ -83,6 +83,14 @@ dependencies {
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     api "androidx.lifecycle:lifecycle-common:2.4.1"
 
+
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
+
+    api "com.google.android.material:material:1.5.0"
+
+    api 'io.github.h07000223:flycoTabLayout:3.0.0'
+
     // Bugsnag
     api "com.bugsnag:bugsnag-android:5.+"
+    
 }
