--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id "com.bugsnag.android.gradle"
+
 }
 
 android {
@@ -92,5 +94,9 @@ dependencies {
 
     // Bugsnag
     api "com.bugsnag:bugsnag-android:5.+"
-    
+
+    //图表库
+    api 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 }
